--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "url": "https://github.com/pdamoc/elm-syntax-sscce/issues"
   },
   "homepage": "https://github.com/pdamoc/elm-syntax-sscce#readme",
-  "dependencies": {},
   "devDependencies": {
+    "@parcel/transformer-elm": "^2.0.0-beta.2",
     "elm": "^0.19.1-3",
-    "elm-hot": "^1.1.5",
-    "node-elm-compiler": "^5.0.5",
-    "parcel": "^1.12.4"
+    "elm-hot": "^1.1.6",
+    "node-elm-compiler": "^5.0.6",
+    "parcel": "^2.0.0-beta.2"
   }
 }
