--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
   },
   "homepage": "https://github.com/pdamoc/elm-syntax-sscce#readme",
   "devDependencies": {
-    "@parcel/transformer-elm": "^2.0.0-beta.2",
-    "elm": "^0.19.1-3",
+    "@parcel/transformer-elm": "^2.0.0-rc.0",
+    "elm": "^0.19.1-5",
     "elm-hot": "^1.1.6",
     "node-elm-compiler": "^5.0.6",
-    "parcel": "^2.0.0-beta.2"
+    "parcel": "^2.0.0-rc.0"
   }
 }
